[effects] Support GLES 3 in Blur and BackgroundContrast

Fix code generation in case OpenGL ES 3 or later is used.

BUG: 324478
FIXED-IN: 5.5
REVIEW: 126003